# market-microstructure-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  autolint.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: BTCUSDT_swap_demo_10s.csv  BTCUSDT_swap_demo_10s.parquet  BTCUSDT_swap_demo_10s_metrics.csv  BTCUSDT_swap_demo_20s.csv  BTCUSDT_swap_demo_20s_metrics.csv  ETHUSDT_swap_30s.parquet  ETHUSDT_swap_30s_metrics.csv  ETH_bybit_L2_60s.parquet  ETH_bybit_L2_60s_impact_vwap_slices.csv  ETH_bybit_L2_60s_impact_vwap_summary.csv  bybit_ETHUSDTUSDT_spot_L2_60s.csv  ws_bybit_ETHUSDTUSDT_d100_60s.csv  ws_bybit_ETHUSDTUSDT_d5_5s.csv  ws_bybit_ETHUSDTUSDT_d5_5s_3hz.csv  ws_bybit_ETHUSDTUSDT_d5_5s_5hz.csv  ws_bybit_ETHUSDTUSDT_d5_5s_5hz_evtmetrics_w20.csv  ws_bybit_ETHUSDTUSDT_d5_5s_5hz_metrics.csv
impact/ETH_bybit_L2_60s_buy_twap_s20_q50_d25/: slices.csv  summary.csv
notebooks/: tutorial_record_and_analyze.ipynb  tutorial_visualize_orderbook.ipynb
notebooks/data/: ETH_bybit_L2_60s.parquet
notebooks/data/bybit_ETH/: USDT:USDT_swap_50s.parquet
src/: exchange.py  record.py  setup_log.py  snapshot.py
src/market_microstructure_toolkit/: __init__.py  _version.py  advanced_plots.py  event_metrics.py  event_metrics_cli.py  exchange.py  impact.py  impact_cli.py  impact_twap.py  impact_twap_cli.py  impact_vwap.py  impact_vwap_cli.py  metrics.py  metrics_cli.py  plot_adv_cli.py  plot_cli.py  record.py  setup_log.py  snapshot.py  ws_record.py
src/market_microstructure_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: instructions.txt  test_event_metrics.py  test_event_metrics_cli.py  test_exchange.py  test_impact_public_api.py  test_metrics.py  test_record.py  test_setup_log.py  test_snapshot.py  test_ws_record.py
tests/_artifacts/: book.csv  book.parquet  book_param.csv
