[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market_microstructure_toolkit"
version = "0.0.1"
description = "Research toolkit for order book microstructure"
authors = [{name="Leonardo Placidi"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[project.scripts]
mmt-record = "market_microstructure_toolkit.record:main"
mmt-metrics = "market_microstructure_toolkit.metrics_cli:main"
mmt-plot = "market_microstructure_toolkit.plot_cli:main"
mmt-ws-record = "market_microstructure_toolkit.ws_record:main"