[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market_microstructure_toolkit"
version = "0.0.1"
description = "Research toolkit for order book microstructure"
authors = [{name="Leonardo Placidi"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 100
target-version = ["py39","py310"]

[tool.ruff]
line-length = 100
extend-exclude = ["data", "plots", "tests/_artifacts"]
select = ["E", "F", "I"]         # Errors, Flake8 pyflakes, Import order only
ignore = ["E501"]                # Ignore long lines; Black wraps anyway
fix = true                       # still auto-fix trivial stuff

[project.scripts]
mmt-record = "market_microstructure_toolkit.record:main"
mmt-metrics = "market_microstructure_toolkit.metrics_cli:main"
mmt-plot = "market_microstructure_toolkit.plot_cli:main"
mmt-ws-record = "market_microstructure_toolkit.ws_record:main"