[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market_microstructure_toolkit"
dynamic = ["version"]
description = "Research toolkit for order book microstructure"
authors = [{name="Leonardo Placidi"}]
requires-python = ">=3.9"
dependencies = [
  "ccxt>=4.3.0",
  "pandas>=2.1",
  "numpy>=1.24",
  "matplotlib>=3.7",
]


[project.optional-dependencies]
# Parquet support
parquet = ["pyarrow>=14.0"]  # or use "fastparquet>=2024.5.0"
# Websocket streaming via ccxt.pro
#ws = ["ccxtpro>=2.0.0"]
# Developer tooling
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "black>=24.4",
  "ruff>=0.5",
  "pre-commit>=3.7",
]
viz = [
  "jupyter>=1.0",              # notebooks/quick demo
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "src/market_microstructure_toolkit/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.git-cliff]
changelog = "CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ["py39","py310"]

[tool.ruff]
line-length = 100
extend-exclude = ["data", "plots", "tests/_artifacts"]
select = ["E", "F", "I"]         # Errors, Flake8 pyflakes, Import order only
ignore = ["E501"]                # Ignore long lines; Black wraps anyway
fix = true                       # still auto-fix trivial stuff

[project.scripts]
mmt-record = "market_microstructure_toolkit.record:main"
mmt-metrics = "market_microstructure_toolkit.metrics_cli:main"
mmt-plot = "market_microstructure_toolkit.plot_cli:main"
mmt-ws-record = "market_microstructure_toolkit.ws_record:main"
mmt-event-metrics = "market_microstructure_toolkit.event_metrics_cli:main"
mmt-plot-adv = "market_microstructure_toolkit.plot_adv_cli:main"
mmt-impact = "market_microstructure_toolkit.impact_cli:main"
mmt-impact-twap = "market_microstructure_toolkit.impact_twap_cli:main"
mmt-impact-vwap = "market_microstructure_toolkit.impact_vwap_cli:main"

[project.urls]
Homepage = "https://github.com/Gruntrexpewrus/market-microstructure-toolkit"
Issues = "https://github.com/Gruntrexpewrus/market-microstructure-toolkit/issues"